language/move-lang/tests/move_check/expansion/spec_block_in_spec_context.exp
error[E01010]: syntax item restricted to spec contexts
  ┌─ tests/move_check/expansion/spec_block_in_spec_context.move:5:13
  │
5 │             spec {};
  │             ^^^^^^^ 'spec' blocks cannot be used inside of a spec context

