language/move-lang/tests/move_check/expansion/spec_block_in_spec_context.move
address 0x42 {
module M {
    spec module {
        fun S(): () {
            spec {};
        }
    }

    fun t(): () {
        spec {};
    }

    fun a() {}
    fun z() {}
}
}
